feat(reference-manager): implement create currency handler
